[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Beepbop0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.2", features = ["small_rng"]}

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
